# ServiceAi

./: .gitignore  README.md
backend/: .env.example  README.md  alembic.ini  create_db.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_telegram_auth.py  0003_pending_login_consume.py  0004_add_user_avatar_url.py  0005_bitrix24_integrations.py  0006_add_bitrix_openline_id.py  0007_add_vk_channel_type.py  0008_backfill_vk_channels_for_existing_bots.py  0009_add_ok_channel_type.py  0010_backfill_ok_channels_for_existing_bots.py  0011_yandex_oauth_login.py  0012_account_public_id_and_bot_admins.py  0013_bot_channels_unique_per_type.py  0014_dialog_message_operator_admin.py  0015_operator_handoff_settings.py  0016_operator_mode_started.py
backend/app/: config.py  conftest.py  database.py  dependencies.py  diagnostics.py  init_superuser.py  main.py
backend/app/migrations/versions/: 20240601_01_update_ai_models.py  20240702_01_update_dialog_fields.py  20240926_01_add_last_user_message_at.py  20241205_01_add_integration_logs.py  20241205_02_fix_integration_logs_identity.py
backend/app/modules/accounts/: __init__.py  models.py  router.py  schemas.py  (+1 more)
backend/app/scripts/: register_telegram_auth_webhook.py  resync_telegram_webhooks.py  test_register_telegram_auth_webhook.py  test_resync_telegram_webhooks.py
backend/app/security/: __init__.py  auth.py  hashing.py  jwt.py
backend/app/static/: webchat.js
backend/app/utils/: __init__.py  encryption.py  file_tools.py  telegram_http.py  test_telegram_http.py  validators.py
(+167 files in other folders)
