[tool.poetry]
name = "serviceai-backend"
version = "0.1.0"
description = "ServiceAI backend skeleton"
authors = ["ServiceAI Team <dev@example.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.27.0"
pydantic = "^2.7.0"
sqlalchemy = "^2.0.0"
asyncpg = "^0.29.0"
pydantic-settings = "^2.0.0"
passlib = "^1.7.4"
PyJWT = "^2.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
